[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "marineHeatWaves"
version = "0.0.30"
authors = [
    {name = "Eric C. J. Oliver", email = "eric.oliver@utas.edu.au"},
]
description = "A set of functions which implement the Marine Heatwave definition of Hobday et al. (2016, Prog Ocean)"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "scipy",
    "importlib-metadata",
]

[project.urls]
respository = "https://github.com/ecjoliver/marineHeatWaves"
